ios/CVIESDK/bin/cvie64.framework/Headers/cvie.h


typedef int ECVIE;
typedef void* HCVIE;
#define CVIE_DATA_U16 0x00000001
#define CVIE_DATA_S16 0x00000002
#define CVIE_DATA_U8 0x00000004
#define CVIE_DATA_F32 0x00000008
#define CVIE_CREATE_DEFAULT 0
#define CVIE_CREATE_TRACE 16
#define CVIE_PARTYPE_INT 1
#define CVIE_PARTYPE_FLOAT 2
#define CVIE_PARTYPE_STRING 3
#define CVIE_PARTYPE_STRUCT 8
#define CVIE_PARTYPE_MASK 10
#define CVIE_PARTYPE_DOUBLE 11
#define RESERVED_LICERROR_HANDLE ((HCVIE)43)
#define CVIE_E_OK 0                     
#define CVIE_E_NOT_OK 1                 
#define CVIE_E_CREATE_HANDLE 2          
#define CVIE_E_BAD_HANDLE 3             
#define CVIE_E_USER_ABORTED 4           
#define CVIE_E_FATAL_ERROR  5           
#define CVIE_E_FILEIO_ERROR 6           
#define CVIE_E_ILLEGAL_COMMAND 7        
#define CVIE_E_INVALID_INPUT 8          
#define CVIE_E_INVALID_PARAMETER_FILE 9 
#define CVIE_E_LICENSE_ERROR 10         
#define CVIE_E_NOT_SUPPORTED 11         
#define CVIE_E_SETTING_NOT_READY 12     
#define CVIE_E_UNKNOWN_ERROR 15         
#define CVIE_E_OUT_OF_MEMORY 16        
#define MAX_DESCRIPTION_LENGTH 512 
#define PARAMETER_DESCRIPTION 1
#define OPERATION_DESCRIPTION 2
#define RELATIVE_RESOLUTION_X 12
#define RELATIVE_RESOLUTION_Y 13
#define DEPTH_DEPENDENCE_TRANSITION_START 23
#define DEPTH_DEPENDENCE_TRANSITION_END 24
#define CVIE_PARAMETER_FILE 30
#define CVIE_ORIGINAL_PARAMETER_FILE 31
#define CVIE_FLATTENED_PARAMETER_FILE 32
#define CVIE_VERSION_INFO 40
#define CVIE_MEMORY_USAGE 212
#define CVIE_RSS_IDENTIFICATION_ANATOMY_LEVEL 2000
#define CVIE_RSS_IDENTIFICATION_FILENAME_SETTING 2001
CVIE_API ECVIE CVIE_DECL CVIECreate(HCVIE* handle, int flags);
CVIE_API ECVIE CVIE_DECL CVIEDestroy(HCVIE* handle);
CVIE_API ECVIE CVIE_DECL CVIESetParameterFile(HCVIE handle, const char* fileName, int* settings);
CVIE_API ECVIE CVIE_DECL CVIESetParameterBuffer(HCVIE handle, const char* buffer, int* settings);
CVIE_API ECVIE CVIE_DECL CVIESaveParameterFile(HCVIE handle, const char* filename);
CVIE_API ECVIE CVIE_DECL CVIEEnhanceSetup(HCVIE handle, int width, int height, int flags, int setting, const unsigned char* mask);
CVIE_API ECVIE CVIE_DECL CVIEEnhanceNext(HCVIE handle, const void* inImage, void* outImage, int setting);
CVIE_API ECVIE CVIE_DECL CVIESetThreads(HCVIE handle, int threads);
CVIE_API ECVIE CVIE_DECL CVIEGetParameterInfo(HCVIE handle, int setting, int parameter, int* type, int* length);
typedef struct TCVIEDIInfo {
    float nominal_min; 
    float current_min; 
    float neutral_value; 
    float loaded_value; 
    float set_value;       
    float effective_value; 
    float current_max; 
    float nominal_max; 
} TCVIEDIInfo;
CVIE_API ECVIE CVIE_DECL CVIEGetDIInfo(HCVIE handle, int setting, int parameter, TCVIEDIInfo* info);
CVIE_API ECVIE CVIE_DECL CVIEGetParameterValue(HCVIE handle, int setting, int parameter, void* value);
CVIE_API ECVIE CVIE_DECL CVIESetParameterValue(HCVIE handle, int setting, int parameter, const void* value);
CVIE_API const char* CVIE_DECL CVEMGetLastError(HCVIE handle, char* errorString, int length);
#define MAX_ERROR_MESSAGE_LENGTH 128 
CVIE_API ECVIE CVIE_DECL CVIESetProgressCallback(HCVIE handle, int (*CallbackFunction)(float percent));